Add client configuration
