# src/main/java/com/github/fmjsjx/demo/http/api/auth/LoginResult.java
@@ -19,5 +19,7 @@ public class LoginResult {
     private long registerTime;
     private int slot;
     private String wlxPlatform;
+    
+    private Object config;
 
 }
